z-index for tooltip, it resolves #84

--- a/packages/components/src/tooltip.scss
+++ b/packages/components/src/tooltip.scss
@@ -7,6 +7,7 @@
   & .text {
     position: absolute;
     display: none;
+    z-index: 1;
     min-width: 120px;
     max-width: 100%;
     background-color: $black;
